--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=Diplomski Projekat
+
+# Jpa settings
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.generate-ddl=true
+
+#Datasource
+spring.datasource.url=jdbc:mysql://localhost:3306/diplomski
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Security
+#oauth.jwt.secret=VOo54a9dr615iWa
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#Ovo dole mi je potrebno ali nzm sto, kada saljem zahtev za sve mi kaze no auth
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
