--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Diplomski Projekat
 
 # Jpa settings
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
 
 #Datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/diplomski
@@ -10,8 +10,9 @@ spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-# Security
-#oauth.jwt.secret=VOo54a9dr615iWa
+# JWT Configuration
+jwt.secret=VOo54a9dr615iWa67S7f97a7JKsg90h89734
+jwt.expiration=86400000
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
