--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,4 @@ jwt.expiration=86400000
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-#Ovo dole mi je potrebno ali nzm sto, kada saljem zahtev za sve mi kaze no auth
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
