prebacene promenljive na env variable, podesen cors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,17 @@ spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # JWT Configuration
-jwt.secret=VOo54a9dr615iWa67S7f97a7JKsg90h89734
+jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+# OAuth2 Client Configuration for Google
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.client-name=Google
