--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 
 #Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/diplomski
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # JWT Configuration
