--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:
 spring.security.oauth2.client.registration.google.client-name=Google
 
 app.frontend.url=http://localhost:5173
+#app.frontend.url=http://192.168.0.13:5173
+#server.address=192.168.0.13
+#server.port=8080
