--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@
 			<version>${jjwt.version}</version>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>26.5.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
